syntax = "proto3";
package com.grpc.microservice;

option java_multiple_files = true;
option java_package = "com.grpc.microservice";
option java_outer_classname = "ProductServiceProto";

service ProductService {
    rpc readProduct(NoParam) returns (ProductList) {}
    rpc createProduct(ProductDescription) returns (Result) {}
    rpc updateProduct(Product) returns (Result) {}
    rpc deleteProduct(ProductId) returns (Result) {}
}

message NoParam {}

message ProductId {
    int32 id = 1;
}

message ProductDescription {
    string description = 1;
}

message Product {
    string description = 1;
    int32 id = 2;
}

message ProductList {
    bool success = 1;
    repeated Product products = 2;
}

message Result {
    bool success = 1;
}